@@ -102,7 +102,35 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|Directory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|FSDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RAMDirectory
 import|;
 end_import
 
@@ -164,6 +192,44 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|SolrCore
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -192,6 +258,18 @@ name|Arrays
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|logging
+operator|.
+name|Logger
+import|;
+end_import
+
 begin_comment
 comment|/**  * Takes a string (e.g. a query string) as the value of the "q" parameter  * and looks up alternative spelling suggestions in the spellchecker.  * The spellchecker used by this handler is the Lucene contrib SpellChecker.  * @see http://wiki.apache.org/jakarta-lucene/SpellChecker  *  * @author Otis Gospodnetic  */
 end_comment
@@ -204,17 +282,35 @@ name|SpellCheckerRequestHandler
 extends|extends
 name|RequestHandlerBase
 block|{
+DECL|field|log
+specifier|private
+specifier|static
+name|Logger
+name|log
+init|=
+name|Logger
+operator|.
+name|getLogger
+argument_list|(
+name|SpellCheckerRequestHandler
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 DECL|field|spellChecker
 specifier|private
 name|SpellChecker
 name|spellChecker
 decl_stmt|;
 comment|/*      * From http://wiki.apache.org/jakarta-lucene/SpellChecker      * If reader and restrictToField are both not null:      * 1. The returned words are restricted only to the words presents in the field      * "restrictToField "of the Lucene Index "reader".      *      * 2. The list is also sorted with a second criterium: the popularity (the      * frequence) of the word in the user field.      *      * 3. If "onlyMorePopular" is true and the mispelled word exist in the user field,      * return only the words more frequent than this.      *       */
-DECL|field|reader
+DECL|field|nullReader
 specifier|private
 specifier|static
 name|IndexReader
-name|reader
+name|nullReader
 init|=
 literal|null
 decl_stmt|;
@@ -234,8 +330,19 @@ literal|false
 decl_stmt|;
 DECL|field|spellcheckerIndexDir
 specifier|private
-name|String
+name|Directory
 name|spellcheckerIndexDir
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+DECL|field|dirDescription
+specifier|private
+name|String
+name|dirDescription
+init|=
+literal|"(ramdir)"
 decl_stmt|;
 DECL|field|termSourceField
 specifier|private
@@ -295,28 +402,102 @@ argument_list|(
 literal|"termSourceField"
 argument_list|)
 expr_stmt|;
-name|spellcheckerIndexDir
-operator|=
+try|try
+block|{
+name|String
+name|dir
+init|=
 name|p
 operator|.
 name|get
 argument_list|(
 literal|"spellcheckerIndexDir"
 argument_list|)
-expr_stmt|;
-try|try
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|dir
+condition|)
 block|{
+name|File
+name|f
+init|=
+operator|new
+name|File
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|f
+operator|.
+name|isAbsolute
+argument_list|()
+condition|)
+block|{
+name|f
+operator|=
+operator|new
+name|File
+argument_list|(
+name|SolrCore
+operator|.
+name|getSolrCore
+argument_list|()
+operator|.
+name|getDataDir
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+name|dirDescription
+operator|=
+name|f
+operator|.
+name|getAbsolutePath
+argument_list|()
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"using spell directory: "
+operator|+
+name|dirDescription
+argument_list|)
+expr_stmt|;
+name|spellcheckerIndexDir
+operator|=
+name|FSDirectory
+operator|.
+name|getDirectory
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"using RAM based spell directory"
+argument_list|)
+expr_stmt|;
+block|}
 name|spellChecker
 operator|=
 operator|new
 name|SpellChecker
 argument_list|(
-name|FSDirectory
-operator|.
-name|getDirectory
-argument_list|(
 name|spellcheckerIndexDir
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -384,7 +565,17 @@ condition|(
 name|cmd
 operator|!=
 literal|null
-operator|&&
+condition|)
+block|{
+name|cmd
+operator|=
+name|cmd
+operator|.
+name|trim
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
 name|cmd
 operator|.
 name|equals
@@ -392,11 +583,61 @@ argument_list|(
 literal|"rebuild"
 argument_list|)
 condition|)
+block|{
 name|rebuild
 argument_list|(
 name|req
 argument_list|)
 expr_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"cmdExecuted"
+argument_list|,
+literal|"rebuild"
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|cmd
+operator|.
+name|equals
+argument_list|(
+literal|"reopen"
+argument_list|)
+condition|)
+block|{
+name|reopen
+argument_list|()
+expr_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"cmdExecuted"
+argument_list|,
+literal|"reopen"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+literal|400
+argument_list|,
+literal|"Unrecognized Command: "
+operator|+
+name|cmd
+argument_list|)
+throw|;
+block|}
+block|}
 name|Float
 name|accuracy
 decl_stmt|;
@@ -470,6 +711,24 @@ name|e
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+literal|null
+operator|!=
+name|words
+operator|&&
+operator|!
+literal|""
+operator|.
+name|equals
+argument_list|(
+name|words
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+condition|)
+block|{
 name|String
 index|[]
 name|suggestions
@@ -482,7 +741,7 @@ name|words
 argument_list|,
 name|numSug
 argument_list|,
-name|reader
+name|nullReader
 argument_list|,
 name|restrictToField
 argument_list|,
@@ -504,6 +763,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
 comment|/** Rebuilds the SpellChecker index using values from the<code>termSourceField</code> from the      * index pointed to by the current {@link IndexSearcher}.      */
 DECL|method|rebuild
 specifier|private
@@ -515,7 +775,26 @@ name|req
 parameter_list|)
 throws|throws
 name|IOException
+throws|,
+name|SolrException
 block|{
+if|if
+condition|(
+literal|null
+operator|==
+name|termSourceField
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+literal|500
+argument_list|,
+literal|"can't rebuild spellchecker index without termSourceField configured"
+argument_list|)
+throw|;
+block|}
 name|IndexReader
 name|indexReader
 init|=
@@ -545,16 +824,24 @@ argument_list|(
 name|dictionary
 argument_list|)
 expr_stmt|;
+name|reopen
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**      * Reopens the SpellChecker index directory.      * Useful if an external process is responsible for building      * the spell checker index.      */
+DECL|method|reopen
+specifier|private
+name|void
+name|reopen
+parameter_list|()
+throws|throws
+name|IOException
+block|{
 name|spellChecker
 operator|.
 name|setSpellIndex
 argument_list|(
-name|FSDirectory
-operator|.
-name|getDirectory
-argument_list|(
 name|spellcheckerIndexDir
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -578,7 +865,7 @@ block|{
 return|return
 literal|"The SpellChecker Solr request handler for SpellChecker index: "
 operator|+
-name|spellcheckerIndexDir
+name|dirDescription
 return|;
 block|}
 DECL|method|getSourceId
